Fix bug with red X positioning
Noticed that in Firefox, the red x for marking a hit was not centered
properly. So I made some adjustments in the CSS and it appears to be
fixed.

--- a/src/style.css
+++ b/src/style.css
@@ -66,6 +66,8 @@ header {
 }
 
 .grid-cell {
+    display: flex;
+    justify-content: center;
     text-align: center;
     font-size: 2.6em;
     background-color: var(--mid);
@@ -82,4 +84,5 @@ header {
 [data-is-hit='true']::after {
     content: "×";
     color: red;
+    align-self: center;
 }
